jhipstertest-k8s/jhipstertest-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jhipstertest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jhipstertest
      version: 'v1'
  template:
    metadata:
      labels:
        app: jhipstertest
        version: 'v1'
        BUILD_NUMBER: '8'
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - jhipstertest
                topologyKey: kubernetes.io/hostname
              weight: 100
      containers:
        - name: jhipstertest-app
          image: herzogf/jhipstertest:latest
          resources:
            requests:
              memory: '256Mi'
              cpu: '250m'
            limits:
              memory: '1Gi'
              cpu: '1'
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /management/health
              port: http
            initialDelaySeconds: 20
            periodSeconds: 15
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /management/health
              port: http
            initialDelaySeconds: 120
