jhipstertest-k8s/jhipstertest-service.yml
apiVersion: v1
kind: Service
metadata:
  name: jhipstertest
  labels:
    app: jhipstertest
spec:
  selector:
    app: jhipstertest
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 8080
