jhipstertest-k8s/mysql.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jhipstertest-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jhipstertest-mysql
  template:
    metadata:
      labels:
        app: jhipstertest-mysql
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: jhipstertest-mysql-pvc
      containers:
        - name: mysql
          image: mysql:8.0.20
          args:
            - --lower_case_table_names=1
            - --skip-ssl
            - --character_set_server=utf8mb4
            - --explicit_defaults_for_timestamp
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: data
              mountPath: /var/lib/mysql/
          resources:
            requests:
              memory: '256Mi'
              cpu: '250m'
            limits:
              memory: '1Gi'
              cpu: '1'
---
apiVersion: v1
kind: Service
metadata:
  name: jhipstertest-mysql
spec:
  selector:
    app: jhipstertest-mysql
  ports:
    - port: 3306
