jhipstertest-k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  labels:
    app: jhipstertest
spec:
  selector:
    app: jhipstertest
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
