jhipstertest-k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    #cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
spec:
  rules:
  - host: team-1.homek8s.dev
    http:
      paths:
      - backend:
          serviceName: app-service
          servicePort: http
        path: /
  tls:
  - hosts:
    - team-1.homek8s.dev
    secretName: app-ingress-cert
